Removed jQuery dependency, replaced implementation with display switch; unlike original visibility switch, this way there are no issues with components lagging behind their containers

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ select {
 	width:180px;
 	height:140px;
 	background-color:white;
-	visibility:hidden;
+	display:none;
 	border:2px solid lightgrey;
 	border-top:0px;
 	text-align:center;
